tests/baselines/reference/topFunctionTypeNotCallable.errors.txt
topFunctionTypeNotCallable.ts(4,1): error TS2345: Argument of type '[]' is not assignable to parameter of type 'never'.


==== topFunctionTypeNotCallable.ts (1 errors) ====
    // repro from #48840
    
    declare let foo: (...args: never) => void;
    foo(); // error
    ~~~~~
!!! error TS2345: Argument of type '[]' is not assignable to parameter of type 'never'.
    